# dsa-ciencia-de-dados

./: .gitignore  pyproject.toml
modulo-business-analytics-and-machine-learning/12-Cap20/: LEIAME.txt  Projeto12.ipynb  gera_dados.py  projeto12app.py  pyproject.toml  requirements.txt
modulo-business-analytics-and-machine-learning/12-Cap21/: LEIAME.txt  Projeto13.ipynb  main.py  projeto13app.py  pyproject.toml  requirements.txt
modulo-business-analytics-and-machine-learning/12-Projeto/: README.md  dsa_app.py  pyproject.toml  requirements.txt
modulo-business-analytics-and-machine-learning/23-Cap18/: LEIAME.txt  Projeto10.ipynb  pyproject.toml  requirements.txt
modulo-business-analytics-and-machine-learning/34-Cap17/: LEIAME.txt  projeto9.py  pyproject.toml  requirements.txt
modulo-business-analytics-and-machine-learning/34-Cap17/suporte/: FAQ1.docx  FAQ2.docx
modulo-business-analytics-and-machine-learning/39-Cap16/: LEIAME.txt  Projeto8.ipynb  requirements.txt
modulo-business-analytics-and-machine-learning/83-Cap12/: README.md
modulo-business-analytics-and-machine-learning/Cap14/: LEIAME.txt  Projeto6.ipynb  requirements.txt
modulo-business-analytics-and-machine-learning/Cap15/: LEIAME.txt  Projeto7-01-Tabelas.sql  Projeto7-02-CriaTabelas.py  Projeto7-03-CarregaDados.py  Projeto7-04-LLM.py  Projeto7-05-Run-Pipeline.py  main.py  pyproject.toml  requirements.txt
modulo-business-analytics-and-machine-learning/Cap19-Projeto11/: LEIAME.txt  Projeto11.ipynb  pyproject.toml  requirements.txt
modulo-cloud-computing/Cap06/: Projeto2.ipynb  xgboost-model
modulo-cloud-computing/Cap08/: Dockerfile-AppleSilicon  Dockerfile-Intel  LEIAME.txt  requirements.txt
modulo-cloud-computing/Cap09/: Projeto4.ipynb
modulo-cloud-computing/Cap10/: Projeto5.ipynb
modulo-cloud-computing/Cap11/: Projeto6.ipynb  SageMakerAutopilotCandidateDefinitionNotebook.ipynb  SageMakerAutopilotDataExplorationNotebook.ipynb  dataset.txt
modulo-cloud-computing/Cap12/: ProjetoDSA.ipynb  dsa_lambda_function.py
modulo-cloud-computing/Cap14/: 01-DSA Bronze Layer.ipynb  02-DSA Silver Layer.ipynb  03-DSA Gold Layer.ipynb
modulo-cloud-computing/Cap15/: Dados_Vendas.xlsx  DashProjeto9.pbix
modulo-cloud-computing/Cap16/: Projeto10.py
modulo-matematica-e-estatistica/matematica-Cap12/: LEIAME.txt  Projeto3.ipynb  requirements.txt
modulo-matematica-e-estatistica/matematica-Cap13/: LEIAME.txt  Lab6.ipynb  requirements.txt
modulo-matematica-e-estatistica/matematica-Cap14/: LEIAME.txt  Projeto4.ipynb  requirements.txt
modulo-matematica-e-estatistica/matematica-Cap15/: LEIAME.txt  Projeto5.ipynb  requirements.txt
modulo-matematica-e-estatistica/matematica-Cap16/: Projeto6.ipynb
modulo-matematica-e-estatistica/matematica-Cap18/: Exercicio8.ipynb  Lab7.ipynb
modulo-matematica-e-estatistica/matematica-Cap20/: Exercicio8-Solucao.ipynb  Projeto7.ipynb
modulo-matematica-e-estatistica/matematica-Cap21/: Exercicio9-Solucao.ipynb  TestesEstatisticosParametricos.ipynb
modulo-matematica-e-estatistica/matematica-Cap22/: LEIAME.txt  Projeto8.ipynb
modulo-series-temporais-e-real-time-analytics/project1/: LEIAME.txt  Projeto1-Tarefa1.ipynb  Projeto1-Tarefa2.ipynb  Projeto1-Tarefa3.ipynb  Projeto1-Tarefa4.ipynb  Projeto1-Tarefa5.ipynb  Projeto1-Tarefa6.ipynb  Projeto1-Tarefa7.ipynb  Projeto1-Tarefa8.ipynb  pyproject.toml
modulo-series-temporais-e-real-time-analytics/project10-timeseries/: LEIAME.md
modulo-series-temporais-e-real-time-analytics/project2-timeseries/: Dockerfile
modulo-series-temporais-e-real-time-analytics/project3-timeseries/: Dockerfile  LEIAME.txt  docker-compose.yml  entrypoint.sh
modulo-series-temporais-e-real-time-analytics/project4-timeseries/: LEIAME.txt  docker-compose.yml
modulo-series-temporais-e-real-time-analytics/project5-timeseries/: Dockerfile  LEIAME.txt
modulo-series-temporais-e-real-time-analytics/project6-timeseries/: LEIAME.txt  docker-compose.yml
(+48 files in other folders)
