[project]
name = "ds-ciencia-de-dados"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.10.7",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
]

[tool.uv.workspace]
members = [
    "modulo-business-analytics-and-machine-learning/12-Projeto",
]
