[project]
name = "ds-ciencia-de-dados"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.123.5",
    "ipykernel>=6.30.0",
    "notebook>=7.4.4",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "pyspark>=4.0.1",
    "requests>=2.32.4",
    "scikit-learn>=1.8.0",
    "streamlit>=1.52.0",
    "uvicorn>=0.38.0",
    "watchdog>=6.0.0",
]

[tool.uv.workspace]
members = [
    "modulo-series-temporais-e-real-time-analytics/project1",
]
